Tags spacing fixed in footer for mobile

--- a/src/components/styles/_footer.scss
+++ b/src/components/styles/_footer.scss
@@ -14,6 +14,10 @@
 
 .container.fat-footer div.tagcloud {
   margin: 30px 0 0;
+
+  @media (max-width: 980px) {
+    margin: 10px 0 30px;
+  }
 }
 
 .container.fat-footer div.pm-video-wrapper {
